data/all_generated_tests/raw_wast_tests/block_IncorrectConditionEvaluation_2284.wast
;; 5. **Negated Condition**:    - Inside a block, test a negated condition (`i32.const 1`, `i32.eqz`, `br_if 0`) to branch conditionally. Verify if the negation results in correct branching decision.        Constraints: Checks if negating conditions (`eqz`) properly influence the branch decision taken by `br_if`.

(assert_invalid
  (module (func $negated-condition
    (block (result i32)
      (i32.const 1)
      (i32.eqz)
      (br_if 0)
      (i32.const 42)
    )
  ))
  "type mismatch"
)